--- a/app/client/main.html
+++ b/app/client/main.html
@@ -2,9 +2,11 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>meteor-application-template</title>
+  <title>Flick Critik</title>
 </head>
 
 <body>
+<div class="page-container">
   <div id="root"></div>
+</div>
 </body>
